name:                dawg
version:             0.1.0.0
synopsis:            Directed Acyclic Word Graph (MA-FSA) library
description:
            A directed acyclic word graph (or minimal acyclic finite
            state automaton) that lets you do string lookup
license:             GPL-3
license-file:        LICENSE
author:              Kevin Brubeck Unhammer
maintainer:          unhammer@fsfe.org
copyright:           Kevin Brubeck Unhammer
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Dawg
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       containers >= 0.5
  -- hs-source-dirs:
  default-language:    Haskell2010
